--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,15 @@ limitations under the License.</string>
     <string name="r_r_title">rRTitle</string>
     <string name="notification_ctitle">Reminder</string>
     <string name="title">Title</string>
+    <string name="title_activity_add_speciality">AddSpecialityActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 
 
     <string name="help_activity_action_bar_title">Help</string>
